--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,10 @@
 
   <link rel="stylesheet" href="./styles/index.css">
 </head>
+
 <body>
-  
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore alias, nisi rem soluta dolor
+    accusantium ab vero iure placeat esse facere numquam eligendi temporibus aut odit, id a cum.</p>
 </body>
+
 </html>
