--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="pt-br">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram</title>
 
   <link rel="stylesheet" href="./styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore alias, nisi rem soluta dolor
-    accusantium ab vero iure placeat esse facere numquam eligendi temporibus aut odit, id a cum.</p>
+ 
 </body>
 
 </html>
