--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 
   </main>
 
+  <footer class="container">
+    <span>
+      Travelgram &copy; 2024
+    </span>
+
+    <span>Termos de uso</span>
+    <span>Política de privacidade</span>
+  </footer>
+
 
 </body>
 
